
AC_INIT(reConServer,0.15.1)
AC_CONFIG_SRCDIR(reConServer.cxx)

AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE

AC_PROG_CC
AC_PROG_CXX

#AC_SEARCH_LIBS doesn't really support C++, ...
#AC_SEARCH_LIBS(, dum, , [
#  AC_MSG_ERROR([unable to find dum(), install libdum and/or set LDFLAGS])
#])

AC_OUTPUT(Makefile)

